--- a/_src/Ui/Pages/Weather.razor
+++ b/_src/Ui/Pages/Weather.razor
@@ -1,4 +1,5 @@
 ﻿@page "/weather"
+@using Align = Microsoft.FluentUI.AspNetCore.Components.Align
 @inject HttpClient Http
 
 <PageTitle>Weather</PageTitle>
