--- a/_src/Ui/Layout/MainLayout.razor
+++ b/_src/Ui/Layout/MainLayout.razor
@@ -1,10 +1,14 @@
-﻿@inherits LayoutComponentBase
+﻿@using Orientation = Microsoft.FluentUI.AspNetCore.Components.Orientation
+@inherits LayoutComponentBase
 
 <FluentLayout>
     <FluentHeader>
-        Devv Gateway
+        <FluentSpacer />
+        DEVV Gateway
+        <FluentSpacer />
     </FluentHeader>
-    <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%">
+    <FluentStack Class="main" Orientation="Orientation.Horizontal" Width="100%"
+                 Style="column-gap: 0px; !important;">
         <NavMenu/>
         <FluentBodyContent Class="body-content">
             <ErrorBoundary>
@@ -19,9 +23,4 @@
             </ErrorBoundary>
         </FluentBodyContent>
     </FluentStack>
-    <FluentFooter>
-        <a href="https://www.fluentui-blazor.net" target="_blank">Documentation and demos</a>
-        <FluentSpacer/>
-        <a href="https://learn.microsoft.com/en-us/aspnet/core/blazor" target="_blank">About Blazor</a>
-    </FluentFooter>
 </FluentLayout>
