--- a/_src/UI.BlazorWasm/_Imports.razor
+++ b/_src/UI.BlazorWasm/_Imports.razor
@@ -14,3 +14,4 @@
 @using global::Shared.ViewModels.Metrics
 @using FluentOrientation = Microsoft.FluentUI.AspNetCore.Components.Orientation
 @using ApexOrientation = ApexCharts.Orientation
+@using Microsoft.FluentUI.AspNetCore.Components
