--- a/_src/UI.BlazorWasm/App.razor
+++ b/_src/UI.BlazorWasm/App.razor
@@ -1,20 +1,20 @@
 ﻿﻿@using Microsoft.FluentUI.AspNetCore.Components
 
-<FluentProvider>
-    <Router AppAssembly="@typeof(App).Assembly">
-        <Found Context="routeData">
-            <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-            <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-        </Found>
-        <NotFound>
-            <PageTitle>Not found</PageTitle>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <FluentCard>
-                    <h1>404 - Page Not Found</h1>
-                    <p role="alert">Sorry, there's nothing at this address.</p>
-                    <FluentButton Appearance="Appearance.Accent" Href="/">Go Home</FluentButton>
-                </FluentCard>
-            </LayoutView>
-        </NotFound>
-    </Router>
-</FluentProvider>
+<FluentDesignTheme Mode="DesignThemeModes.Dark" OfficeColor="OfficeColor.OneNote" />
+
+<Router AppAssembly="@typeof(App).Assembly">
+    <Found Context="routeData">
+        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+    </Found>
+    <NotFound>
+        <PageTitle>Not found</PageTitle>
+        <LayoutView Layout="@typeof(MainLayout)">
+            <FluentCard>
+                <h1>404 - Page Not Found</h1>
+                <p role="alert">Sorry, there's nothing at this address.</p>
+                <FluentButton Appearance="Appearance.Accent" Href="/">Go Home</FluentButton>
+            </FluentCard>
+        </LayoutView>
+    </NotFound>
+</Router>
